# ls_sh

./: CMakeLists.txt  README.md  main.cpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
nbproject/private/: configurations.xml  private.xml
